--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
         
    
     <footer>
-        <p>Site criado por <a href="">Gustavo Guanabara para o <a href="https://www.cursoemvideo.com/">Curso em Vídeo</a></a></p>
+        <p>Site criado por <a href="inkedin.com/in/vitor-henriques-a9ab5b234/">João Vitor Lima Henriques</a>
     </footer>
+
 
     
 </body>
