--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         
    
     <footer>
-        <p>Site criado por <a href="linkedin.com/in/vitor-henriques-a9ab5b234/">João Vitor Lima Henriques</a>
+        <p>Site criado por <a href="https://www.linkedin.com/in/joao-vitor-henriques-dev/">João Vitor Lima Henriques</a>
     </footer>
 
 
